contenido principal completado, solo estetico.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
     <!--css style-->
     <link rel="stylesheet" href="./main.css">
 
@@ -25,7 +29,7 @@
 
     <header>
 
-        <div class="container">
+        <div class="container_header">
 
             <div class="header_icon_left">
 
@@ -49,6 +53,46 @@
 
 
     </header>
+
+    <div class="container_principal">
+        <div class="container_principal_category">
+            <div class="container_category_element">Lentes</div>
+            <div class="container_category_element">Filtro Azul</div>
+            <div class="container_category_element">Mujer</div>
+            <div class="container_category_element">Hombre</div>
+            <div class="container_category_element">Niño</div>
+        </div>
+
+    </div>
+
+    <div class="container_principal_banner">
+        <img src="./img/pexels-george-keating-948331.jpg" alt="" class="container_principal_img">
+        <button class="container_banner_button">Shop Now</button>
+    </div>
+
+    <div class="container_principal_i">
+        <div class="container_principal_icons">
+            <img src="./img/agatado.svg" alt="" class="container_icons_elements">
+            <img src="./img/cuadrado.svg" alt="" class="container_icons_elements">
+            <img src="./img/piloto.svg" alt="" class="container_icons_elements">
+            <img src="./img/redondo.svg" alt="" class="container_icons_elements">
+            <img src="./img/corazon.svg" alt="" class="container_icons_elements">
+            <img src="./img/raro.svg" alt="" class="container_icons_elements">
+        </div>
+    </div>
+    
+    <div class="container_principal_button">
+        <div class="container_button_line">
+            <button class="container_button_see">See Everything</button>
+        </div>
+        
+    </div>
+
+    <div class="container_secondary_title">
+        <div class="container_secondary_line">
+            <div class="container_secondary_text">Best Seller</div>
+        </div>
+    </div>
 
 </body>
 
